refactor: refactored service file for less cluter, applied stylings

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-to-do-list></app-to-do-list>
+<header class="app-container">
+    <div class="header-content">
+        <h1>Angular</h1>
+        <h2>Todo List</h2>
+      </div>
+</header>
+<router-outlet></router-outlet>
