feat: added editing of task, filtering of tasks, sorting of tasks

--- a/src/app/components/to-do-list/task-form/task-form.component.html
+++ b/src/app/components/to-do-list/task-form/task-form.component.html
@@ -12,6 +12,6 @@
       <div class="text-danger">Opis required</div>
     </div>
     <button [disabled]="!taskForm.valid" type="submit">{{ task.id > -1 ? 'Edit' : 'Add' }}</button>
-    <button routerLink="/">Cancel</button>
+    <button (click)="navigateToRoot()">Cancel</button>
   </form>
 </div>
