--- a/src/app/components/to-do-list/todo-list.component.css
+++ b/src/app/components/to-do-list/todo-list.component.css
@@ -1,8 +1,13 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
-/* Style for table headers */
+@import "~bootstrap-icons/font/bootstrap-icons.css";
+
 .table-header {
     background-color: #939393;
     font-weight: bold;
+
+  }
+  .clickable {
+    cursor: pointer;
   }
   
   /* Style for the table and its elements */
