--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,5 @@
+@import "~bootstrap-icons/font/bootstrap-icons.css";
+
 .app-container {
     display: flex;
     flex-direction: column; /* Stack items vertically */
