styles: made the app more responsive

--- a/src/app/components/to-do-list/task-form/task-form.component.css
+++ b/src/app/components/to-do-list/task-form/task-form.component.css
@@ -37,3 +37,6 @@
   button:hover {
     background-color: #0056b3; /* Darker blue on hover */
   }
+  .form-control.ng-invalid {
+    border: 2px solid red; /* Set a red border for invalid inputs */
+  }
