--- a/src/app/components/to-do-list/todo-list.component.html
+++ b/src/app/components/to-do-list/todo-list.component.html
@@ -1,47 +1,49 @@
 <div class="container">
-    <div class="d-flex align-items-center justify-content-between mb-3">
-        <div>
-          <div class="input-group">
-            <input
-              type="text"
-              class="form-control"
-              placeholder="Search tasks..."
-              [(ngModel)]="searchTerm"
-              name="searchTerm"
-            />
-            <button class="btn btn-outline-secondary" (click)="searchTasks()">
-                <i class="bi bi-search"></i>
-            </button>
-          </div>
-        </div>
-        <div>
-          <button routerLink="/task-form" class="btn btn-success">Add New Task</button>
-        </div>
+  <div class="d-flex flex-column flex-md-row align-items-md-center justify-content-between mb-3 gap-3">
+    <div class="flex-grow-1">
+      <div class="input-group">
+        <input
+          type="text"
+          class="form-control"
+          placeholder="Search tasks..."
+          [(ngModel)]="searchTerm"
+          name="searchTerm"
+        />
+        <button class="btn btn-outline-secondary btn-sm" (click)="searchTasks()">
+          <i class="bi bi-search"></i>
+        </button>
       </div>
-    <h1 class="mt-4">Task List</h1>
-   
-      <table class="table table-bordered">
-        <thead class="table-header table-secondary">
-          <tr >
-            <th (click)="sortTasks('id')" class="clickable col title">#</th>
-            <th (click)="sortTasks('title')" class="clickable">Title</th>
-            <th (click)="sortTasks('desc')" class="clickable">Desc</th>
-            <th>Status</th>
-            <th>Actions</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let task of tasks$ | async">
-            <td>{{ task.id }}</td>
-            <td>{{ task.naslov }}</td>
-            <td>{{ task.opis }}</td>
-            <td>{{ task.opravljeno ? 'Done' : 'ToDo' }}</td>
-            <td *ngIf="!task.opravljeno">
-              <button class="btn btn-success">Done</button>
-              <button [routerLink]="['/task-form', task.id]" class="btn btn-primary">Edit</button>
-              <button (click)="deleteTask(task.id)" class="btn btn-danger">Delete</button>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+    </div>
+    <div class="mt-3 mt-md-0">
+      <button routerLink="/task-form" class="btn btn-success btn-block btn-md-auto">Add New Task</button>
+    </div>
   </div>
+  
+  <h1 class="mt-4">Task List</h1>
+  <div class="table-responsive">
+    <table class="table table-bordered">
+      <thead class="table-header table-secondary">
+        <tr>
+          <th (click)="sortTasks('id')" class="clickable col-2 col-md-1">#</th>
+          <th (click)="sortTasks('title')" class="clickable col-4 col-md-3">Title</th>
+          <th (click)="sortTasks('desc')" class="clickable col-4 col-md-3">Desc</th>
+          <th class="col-2 col-md-2">Status</th>
+          <th class="col-12 col-md-3">Actions</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let task of tasks$ | async">
+          <td>{{ task.id }}</td>
+          <td>{{ task.naslov }}</td>
+          <td>{{ task.opis }}</td>
+          <td>{{ task.opravljeno ? 'Done' : 'ToDo' }}</td>
+          <td *ngIf="!task.opravljeno" class="d-flex justify-content-center justify-content-md-start">
+            <button (click)="markTaskAsDone(task)" class="btn btn-success me-2">Done</button>
+            <button [routerLink]="['/task-form', task.id]" class="btn btn-primary me-2">Edit</button>
+            <button (click)="deleteTask(task.id)" class="btn btn-danger">Delete</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
