--- a/src/app/components/to-do-list/todo-list.component.html
+++ b/src/app/components/to-do-list/todo-list.component.html
@@ -21,7 +21,7 @@
   
   <h1 class="mt-4">Task List</h1>
   <div class="table-responsive">
-    <table class="table table-bordered">
+    <table class="table table-bordered" *ngIf="tasks$ | async as tasks;">
       <thead class="table-header table-secondary">
         <tr>
           <th (click)="sortTasks('id')" class="clickable col-2 col-md-1">#</th>
